Added cards on HP and stuff

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,8 @@
 {
+  "COMMON": {
+    "website_name": "Brocapêche"
+  },
   "HOMEPAGE": {
-    "hello": "Coucou les amis !"
+    "big_title": "Brocapêche"
   }
 }
