--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,6 +2,9 @@
   "COMMON": {
     "website_name": "Brocapêche"
   },
+  "MENU": {
+    "homepage": "Accueil"
+  },
   "HOMEPAGE": {
     "big_title": "Brocapêche"
   }
